--- a/apps/dashboard/src/app/globals.css
+++ b/apps/dashboard/src/app/globals.css
@@ -3,3 +3,20 @@
 @theme inline {
 	--font-figtree: var(--font-figtree);
 }
+
+* {
+	@apply border-neutral-700;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	@apply text-balance;
+}
+
+p {
+	@apply text-pretty;
+}
