style: new fonts

--- a/apps/dashboard/src/app/globals.css
+++ b/apps/dashboard/src/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 @theme inline {
-	--font-dm-serif-display: var(--font-dm-serif-display);
-	--font-figtree: var(--font-figtree);
+	--font-general-sans: var(--font-general-sans);
+	--font-stardom: var(--font-stardom);
 }
 
 * {
